includes/efex-common.h

/**
 * @brief Send an EFEX request to the device.
 *
 * This function sends a request to the EFEX device with the specified command type,
 * address, and length parameters.
 *
 * @param[in] ctx Pointer to the EFEX context structure.
 * @param[in] type Command type to send.
 * @param[in] addr Address parameter for the command.
 * @param[in] length Length parameter for the command.
 *
 * @return EFEX_ERR_SUCCESS on success, or an error code from enum sunxi_efex_error_t on failure.
 */
int sunxi_send_efex_request(const struct sunxi_efex_ctx_t *ctx, enum sunxi_efex_cmd_t type,
                            uint32_t addr, uint32_t length);
/**
 * @brief Read the EFEX status from the device.
 *
 * This function reads the current status from the EFEX device.
 *
 * @param[in] ctx Pointer to the EFEX context structure.
 *
 * @return Status value on success, or an error code from enum sunxi_efex_error_t on failure.
 */
int sunxi_read_efex_status(const struct sunxi_efex_ctx_t *ctx);
/**
 * @brief Get the device mode from the EFEX context.
 *
 * This function retrieves the current device mode from the provided EFEX context.
 *
 * @param[in] ctx Pointer to the context structure.
 *
 * @return The current device mode as an enumeration value of type sunxi_verify_device_mode_t.
 */
enum sunxi_verify_device_mode_t sunxi_efex_get_device_mode(const struct sunxi_efex_ctx_t *ctx);
/**
 * @brief Get the device mode as a string representation.
 *
 * This function converts the device mode enumeration value to a human-readable string.
 *
 * @param[in] ctx Pointer to the context structure.
 *
 * @return A null-terminated string representing the device mode.
 */
const char *sunxi_efex_get_device_mode_str(const struct sunxi_efex_ctx_t *ctx);
/**
 * @brief Initialize the EFEX context.
 *
 * This function initializes the given context, setting up necessary
 * configurations and resources for future EFEX operations.
 *
 * @param[in] ctx Pointer to the context structure.
 *
 * @return Returns EFEX_ERR_SUCCESS on success, or an error code from enum sunxi_efex_error_t on failure.
 */
int sunxi_efex_init(struct sunxi_efex_ctx_t *ctx);
/**
 * @brief Get error message string for a given error code.
 *
 * This function returns a human-readable string description for the specified error code.
 *
 * @param[in] error_code The error code to get the description for.
 *
 * @return A null-terminated string describing the error.
 */
const char *sunxi_efex_strerror(int error_code);